Quorum/Library/Tests/TypeChecker/Pass/ExpAssignObjectNumObjField.quorum
class Main
    Number n
    Object o        
    action Main
        n:SetValue(7.5)
        o = cast(Object, n)
        if o:Equals(n)
            output "passed"
        end
    end
end
