Quorum/Library/Tests/TypeChecker/Fail/ExpAssignBooleanNumObj.quorum
class main
    action Main
        Number n
        boolean bool = false
        n:SetValue(7.5)
        bool = cast(boolean, n)
    end
end